--- a/cvpr.sty
+++ b/cvpr.sty
@@ -503,9 +503,19 @@
           \@author
         }{
           \iftoggle{cvprrebuttal}{}{
-            \confName~Final Report Submission\\
+          \author[{
+\begin{tabular}[h!]{c@{\extracolsep{8em}}c} 
+Abhishek Khare  & Hari Prasad Sankar \\
+UCSD & UCSD \\ 
+\href{mailto:akhare@ucsd.edu}{akhare@ucsd.edu} & \href{mailto:hsankar@ucsd.edu}{hsankar@ucsd.edu}\\
+Contribution : 50\% & Contribution : 50\%
+\end{tabular}
+}
+            %\confName~ Group 7 : Final Report Submission\\
+              %Abhishek Khare\\ (\href{mailto:akhare@ucsd.edu}{akhare@ucsd.edu}) \\contribution:50\%\\
+              %Hari Prasad Sankar (\href{mailto:hsankar@ucsd.edu}{hsankar@ucsd.edu}) contribution:50\%\\
             \vspace*{1pt}\\
-             \cvprPaperID
+             %\cvprPaperID
           }
         }
       \end{tabular}
