--- a/egbib.bib
+++ b/egbib.bib
@@ -108,13 +108,13 @@ year={2019}
 }
 
 @article{Alpher04,
-author = {M. Sasireka, A. Senthilkumar},
-title = {DWT based feature extraction from ECG signal and
-detection of cardiac diseases
+author = {Dr. Truong Nguyen, Dr. Gilbert Strang},
+title = {Wavelets and Filter Banks
 },
-journal = {IJAER},
-issue = 1,
-year={2015}
+journal = {Wellesley-Cambridge Press},
+issue = {2},
+pages = {221-250},
+year={1996}
 }
 
 @inproceedings{Alpher05,
