--- a/PaperForReview.tex
+++ b/PaperForReview.tex
@@ -64,7 +64,7 @@ Electrocardiograms (ECG) are signals which capture the mechanical activity of th
 %%%%%%%%% BODY TEXT
 \section{Introduction}
 \label{sec:intro}
-In today’s age Rising Cardiovascular diseases, pegs need of timely diagnosis. Apart from regular health checkups, an easy \& accessible heart health diagnosis solution is needed to prevent mishaps like heart failure. One such solution can be - to use the pulse data (similar to ECG data) from wearable health monitoring devices like Fitbit and analyze that data to detect/diagnose an early warning sign which will enable us to predict the onset of cardiovascular disease. There are various factors which we would have to incorporate such a system – like the power consumption, performance, precision of measurement, desired accuracy of the predictions, etc.
+In today’s age rising Cardiovascular diseases, pegs need of timely diagnosis. Apart from regular health checkups, an easy \& accessible heart health diagnosis solution is needed to prevent mishaps like heart failure. One such solution can be - to use the pulse data (similar to ECG data) from wearable health monitoring devices like Fitbit and analyze that data to detect/diagnose an early warning sign which will enable us to predict the onset of cardiovascular disease. There are various factors which we would have to incorporate such a system – like the power consumption, performance, precision of measurement, desired accuracy of the predictions, etc.
 Now, to build a full ECG abnormality detection and classification mechanism, we would have to choose and implement proper techniques to perform the following actions- data preprocessing, feature extraction, and classification. In this project, our main focus would be on the feature extraction step of this design and the usage of wavelet decomposition and analysis techniques - namely - Discrete Wavelet Transform (DWT) and Wavelet Packet Decomposition (WPD) for the feature extraction of ECG signals.
 To see how effective DWT and WPD feature extraction techniques are with respect to different classifiers and what impact do they have on classification accuracy, we have performed the experiment where we vary the scale(5,9,10), mother wavelet type (db4, db6, haar, symlet4), technique( DWT/ WPD) and classifier(SVM, KNN, Fine decision Tree)  to obtain the best working combination of these to maximize the accuracy of the system.
 Figure 1 shows the difference between a Healthy ECG signal and an unhealthy ECG signal that has arrhythmia.
@@ -89,8 +89,8 @@ Baseline wandering is an artifact present in an ECG signal and the causes for ba
 \caption{Conventional method's accuracy}
 \label{Classification using conventional approach}
 \end{figure}
-Noise in an ECG signal creeps into the ECG recording if the recording pads are not kept properly, Electromyographic noise, and power line interferences. These noises can be removed by utilizing a low pass notch filter at 50/60Hz usually.  But [Cite 1] also suggests further developments that have been used to remove the noise more efficiently.
-Once the pre-processing is done, different ways are used to extract features which are then fed into the classifier. A classic feature extraction method is the Fourier transform method, peak detection( P-QRS-T wave detection). Except for the Fourier transform technique, other techniques mainly rely on time-based abnormality detections.  In the Peak detection technique, the distance between the peaks acts as the main classification basis which is computed as the distance between two R points in the P-QRS-T wave [cite 2]. A simple method of classification is the Principle component analysis of the signal itself though which the classifier will handle by itself. For frequency-based features, performing the FFT followed by the classification based on FFT coefficients is traditionally simple and gives the frequency-based feature classification.\\
+Noise in an ECG signal creeps into the ECG recording if the recording pads are not kept properly, Electromyographic noise, and power line interferences. These noises can be removed by utilizing a low pass notch filter at 50/60Hz usually.  But \cite{Alpher05} also suggests further developments that have been used to remove the noise more efficiently.
+Once the pre-processing is done, different ways are used to extract features which are then fed into the classifier. A classic feature extraction method is the Fourier transform method, peak detection( P-QRS-T wave detection). Except for the Fourier transform technique, other techniques mainly rely on time-based abnormality detections.  In the Peak detection technique, the distance between the peaks acts as the main classification basis which is computed as the distance between two R points in the P-QRS-T wave. A simple method of classification is the Principle component analysis of the signal itself though which the classifier will handle by itself. For frequency-based features, performing the FFT followed by the classification based on FFT coefficients is traditionally simple and gives the frequency-based feature classification.\\
 We simulated the simplistic conventional model and we have presented the classifier output accuracy as shown in Figure 3.
 
 
@@ -127,7 +127,7 @@ We will perform a comparative study for determining which type of mother wavelet
 \section{Simulation Results, Comparison \& Discussion}
 In this section, we will discuss the experimental setup , results and discuss the observations from the classifier output.
 \subsection{Simulation Environment}
-The simulation environment consisted of us extracting the data from [repo link] which consist of patients with various heart arrhythmia. Each data was of length 30 mins. So in order to reduce the computationally convenient and add more data, we chose to take individual sections of the ECG that had problems as our unhealthy signal and portions of ECG signal that did not have any arrhythmia as healthy ones. Each of the unhealthy and healthy signal lengths lasted for a minute. We then used the input signal after doing pre-processing to get the features that we have mentioned above and fed it into the classifiers to see the performance.
+The simulation environment consisted of us extracting the data from the \href{https://physionet.org/content/mitdb/1.0.0/}{database} which consist of patients with various heart arrhythmia. Each data was of length 30 mins. So in order to reduce the computationally convenient and add more data, we chose to take individual sections of the ECG that had problems as our unhealthy signal and portions of ECG signal that did not have any arrhythmia as healthy ones. Each of the unhealthy and healthy signal lengths lasted for a minute. We then used the input signal after doing pre-processing to get the features that we have mentioned above and fed it into the classifiers to see the performance.
 
 \subsection{Simulation Results} 
 We ran the simulation for 5 types of wavelets and depending on the type of method used DWT/WPD, we chose scales. Scales of 9 and 10 were used for DWT and scales of 5 and 9 were used for WPD. Table 1 and Table 2 show us the accuracy results of the classification for a particular type of classifier.
@@ -166,7 +166,7 @@ As observed in Table 1, when using DWT as a feature extraction method we have to
 \begin{tabular}{|c|cc|cc|}
 \hline
 \begin{tabular}[c]{@{}c@{}}KNN \\ Classifier\end{tabular} & \multicolumn{2}{c|}{Scale : 9}                                                            & \multicolumn{2}{c|}{Scale : 10}                                                           \\ \hline
-Method                                                    & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy \\ \hline
+Method                                                    & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy\% & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy\% \\ \hline
 \multirow{5}{*}{DWT}                                      & \multicolumn{1}{c|}{Db2}                                                       & 80       & \multicolumn{1}{c|}{Db2}                                                       & 86       \\ \cline{2-5} 
                                                           & \multicolumn{1}{c|}{Db4}                                                       & 72       & \multicolumn{1}{c|}{Db4}                                                       & 79       \\ \cline{2-5} 
                                                           & \multicolumn{1}{c|}{Db6}                                                       & 75       & \multicolumn{1}{c|}{Db6}                                                       & 84       \\ \cline{2-5} 
@@ -186,7 +186,7 @@ In Table 2, we see classification accuracy results while using WPD as the featur
 \begin{tabular}{|c|cc|cc|}
 \hline
 \begin{tabular}[c]{@{}c@{}}KNN \\ Classifier\end{tabular} & \multicolumn{2}{c|}{Scale : 5}                                                            & \multicolumn{2}{c|}{Scale : 9}                                                            \\ \hline
-Method                                                    & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy \\ \hline
+Method                                                    & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy\% & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\end{tabular}} & Accuracy\% \\ \hline
 \multirow{5}{*}{WPD}                                      & \multicolumn{1}{c|}{Db2}                                                       & 80       & \multicolumn{1}{c|}{Db2}                                                       & 86       \\ \cline{2-5} 
                                                           & \multicolumn{1}{c|}{Db4}                                                       & 78       & \multicolumn{1}{c|}{Db4}                                                       & 84       \\ \cline{2-5} 
                                                           & \multicolumn{1}{c|}{Db6}                                                       & 84       & \multicolumn{1}{c|}{Db6}                                                       & 88       \\ \cline{2-5} 
@@ -205,7 +205,7 @@ Overall, we can say that the db6 mother wavelet performs the best for our applic
 \begin{tabular}{|c|c|c|cl|c|c|}
 \hline
 SVM Classifier                                                   & Scale 9  & Scale10  & \multicolumn{2}{c|}{}                                                                & Scale 5  & Scale9   \\ \hline
-DWT                                                              & Accuracy & Accuracy & \multicolumn{2}{c|}{WPD}                                                             & Accuracy & Accuracy \\ \hline
+DWT                                                              & Accuracy\% & Accuracy\% & \multicolumn{2}{c|}{WPD}                                                             & Accuracy\% & Accuracy\% \\ \hline
 \begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet \\ Db6\end{tabular} & 81.4     & 85.3     & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet\\ Db6\end{tabular}} & 83       & 87       \\ \hline
 \end{tabular}}
 \caption{SVM - Classification Accuracy : DWT vs WPD}
@@ -219,7 +219,7 @@ DWT                                                              & Accuracy & Ac
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
 \begin{tabular}[c]{@{}c@{}}Decision Tree\\ Classifier\end{tabular} & Scale 9  & Scale 10 &                                                                  & Scale 5  & Scale 9  \\ \hline
-DWT                                                                & Accuracy & Accuracy & WPD                                                              & Accuracy & Accuracy \\ \hline
+DWT                                                                & Accuracy\% & Accuracy\% & WPD                                                              & Accuracy\% & Accuracy\% \\ \hline
 \begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet \\ Db6\end{tabular}   & 72       & 84       & \begin{tabular}[c]{@{}c@{}}Mother \\ Wavelet \\ Db6\end{tabular} & 82       & 83       \\ \hline
 \end{tabular}
 }
@@ -238,7 +238,7 @@ As we can infer from the above discussion, using wavelets can simplify our task 
 \section{Conclusion}
 In conclusion, we can deduce that the proposed method of feature extraction using DWT and DWD is much more computationally efficient ( for large scale data) than conventional methods (peak detection, QRS Detection), and by using this method we are able to reduce the number of features/dimensions of the data being fed to the classifier, thus it drastically reduces the latency of the classifier.
 Using wavelet decomposition also doesn’t negatively affect the amount of useful information sent to the classifier that is used for classification.
-We were also able to improve the accuracy of the classification results to a good extent. The resulting system is more time-efficient and the complexity of the overall system was hence reduced.
+We were also able to improve the accuracy of the classification results to a good extent.
 Further, we can say that this method can be easily applied in multi-class classification for detecting different types of abnormalities like arrhythmia, atrial flutter, fibrillation, etc to make the diagnosis more precise.
 
 
